--- a/src/client/partials/movies-filters/movies-filters.scss
+++ b/src/client/partials/movies-filters/movies-filters.scss
@@ -28,4 +28,9 @@
         width: 100%;
         padding: 10px 20px;
     }
+    &__Radios {
+        display: flex;
+        align-items: center;
+        padding-right:20px;
+    }
 }
