--- a/src/client/partials/testimonial/testimonial.scss
+++ b/src/client/partials/testimonial/testimonial.scss
@@ -9,6 +9,8 @@
         align-items: center;
         justify-content: space-around;
         // margin: 50px 0 50px 0;
+        min-height: 50vh;
+        background: #F9F8F7;
     }
 
     &__Row {
